	- Fix the code to free all open file buffers to work properly
	  with the previous overhaul of the multibuffer code instead of
	  going into an infinite loop. (David Benbennick)
	- Add additional checks for variables' not being NULL before we
	  try to free them, to avoid assertion failures. (DLR)
- nano.c:
  die()
	- Rename variable ret to retval for consistency. (DLR)
  copy_filestruct()
	- Rename variable prev to copy to avoid confusion. (DLR)
  print1opt_full()
	- If desc should be empty, allow it to be NULL instead of
	  "", since the latter is not necessarily translated as "".
	  (DLR, found by Jordi)
  usage()
	- Add missing N_() around one message, so that it isn't
	  erroneously translated twice. (DLR)
  do_alt_speller()
	- Replace a set_modified() with SET(MODIFIED) to avoid an
	  unnecessary update, and remove an unneeded clearok(FALSE).
	  (DLR)
  do_output()
	- Properly allow wrapping when we insert a tab, for consistency.
	  (DLR)
	- Don't set current_len until after it's been asserted that both
	  current and current->data aren't NULL. (DLR)
- search.c:
  do_gotoline()
	- Properly show an error message if we try to go to line 0,
	  since the first line in the file is 1. (DLR)
	- Start the search for a line from fileage instead of current
	  (again). (DLR)
  replace_regexp()
	- Rename variable create_flag to create for consistency. (DLR)
  replace_line()
	- Make new_line_size and search_match_count size_t's, for
	  consistency. (DLR)
- utils.c:
  num_of_digits()
	- Use a size_t instead of an int, and rename to digits(). (DLR)
- winio.c:
  do_statusbar_output()
	- Don't set answer_len until after it's been asserted that
	  answer isn't NULL. (DLR)
  nanogetstr()
	- Rename variable def to curranswer to avoid confusion. (DLR)
	- Only declare and use the tabbed variable if DISABLE_TABCOMP
	  isn't defined. (DLR)
	- Refactor to replace unnecessary variable answer_len with
	  curranswer_len, and hence avoid an assertion failure involving