@@ -88,6 +88,8 @@ CVS code -
 - nano.c:
   die()
 	- Rename variable ret to retval for consistency. (DLR)
+	- Tweak the message displayed when a backup file can't be
+	  written, so as to not duplicate a translted string. (DLR)
   copy_filestruct()
 	- Rename variable prev to copy to avoid confusion. (DLR)
   print1opt_full()
